[gd_scene load_steps=9 format=3 uid="uid://bi67e6q1cqa5b"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_023ii"]
[ext_resource type="Material" uid="uid://df2kwnp838n8j" path="res://materials/background.material" id="2_lv5in"]
[ext_resource type="AudioStream" uid="uid://cps78t184dqo" path="res://audio/blipSelect.wav" id="3_vf57o"]
[ext_resource type="AudioStream" uid="uid://b0sekuak1l716" path="res://audio/start_game.wav" id="4_u662q"]

[sub_resource type="CanvasTexture" id="CanvasTexture_btiy5"]

[sub_resource type="LabelSettings" id="LabelSettings_x17sj"]
font_size = 80

[sub_resource type="LabelSettings" id="LabelSettings_qluqq"]
font_size = 80

[sub_resource type="LabelSettings" id="LabelSettings_bi5kk"]
font_size = 80

[node name="PauseMenu" type="Node2D"]
process_mode = 2
script = ExtResource("1_023ii")
highlight = Color(0.807843, 0.329412, 0.133333, 1)
normal_text = Color(1, 1, 1, 1)

[node name="Background" type="TextureRect" parent="."]
material = ExtResource("2_lv5in")
offset_right = 1920.0
offset_bottom = 1080.0
texture = SubResource("CanvasTexture_btiy5")

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
layout_mode = 0
offset_left = 744.0
offset_top = 384.0
offset_right = 1220.0
offset_bottom = 832.0
alignment = 1

[node name="ResumeLabel" type="Label" parent="Background/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.807843, 0.329412, 0.133333, 1)
theme_override_font_sizes/font_size = 90
text = "RESUME"
label_settings = SubResource("LabelSettings_x17sj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainMenuLabel" type="Label" parent="Background/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 80
text = "MAIN MENU"
label_settings = SubResource("LabelSettings_qluqq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PauseLabel" type="Label" parent="Background"]
layout_mode = 0
offset_left = 864.0
offset_top = 240.0
offset_right = 1114.0
offset_bottom = 353.0
mouse_filter = 1
theme_override_colors/font_color = Color(0.807843, 0.329412, 0.133333, 1)
theme_override_font_sizes/font_size = 90
text = "PAUSE"
label_settings = SubResource("LabelSettings_bi5kk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuSelectStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_vf57o")

[node name="StartGameStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_u662q")

[connection signal="gui_input" from="Background/VBoxContainer/ResumeLabel" to="." method="_on_resume_label_gui_input"]
[connection signal="mouse_entered" from="Background/VBoxContainer/ResumeLabel" to="." method="_on_resume_label_mouse_entered"]
[connection signal="gui_input" from="Background/VBoxContainer/MainMenuLabel" to="." method="_on_main_menu_label_gui_input"]
[connection signal="mouse_entered" from="Background/VBoxContainer/MainMenuLabel" to="." method="_on_main_menu_label_mouse_entered"]
[connection signal="gui_input" from="Background/PauseLabel" to="." method="_on_player_label_gui_input"]
[connection signal="mouse_entered" from="Background/PauseLabel" to="." method="_on_player_label_mouse_entered"]
